# interaction

./: README.md
.github/workflows/: workflow.yml
connector/: CMakeLists.txt  README.md  compile_and_install.cmake  package.xml
connector/config/: connector.toml  wifi.toml  wifirecord.toml
connector/doc/: connector_cn.md  connector_en.md
connector/include/connector/: connector.hpp  ctrl_audio.hpp  ctrl_bluetooth.hpp  ctrl_camera.hpp  ctrl_led.hpp  ctrl_wifi.hpp  uploader_log.hpp
connector/script/: aes.py
connector/src/: connector.cpp  ctl_bluetooth.cpp  ctrl_audio.cpp  ctrl_camera.cpp  ctrl_led.cpp  ctrl_wifi.cpp  main.cpp  uploader_log.cpp
cyberdog_action/: CMakeLists.txt  package.xml
cyberdog_action/src/: cyberdog_hand_action.cpp  main.cpp
cyberdog_ai_sports/: CMakeLists.txt  package.xml
cyberdog_ai_sports/src/: calculate_angle.cpp  cyberdog_ai_sports.cpp  main.cpp  sport_counts.cpp
cyberdog_audio/: CMakeLists.txt  lcm_data.lcm  package.xml
cyberdog_audio/include/cyberdog_audio/: audio_fds.hpp  audio_play.hpp  audio_state.hpp  board_info.hpp  cyberdog_action.hpp  cyberdog_audio.hpp  follow_me.hpp  instruction_def.hpp  lcm_atoc_service.hpp  lcm_atoc_topic.hpp  lcm_ctoa_service.hpp  lcm_ctoa_topic.hpp  machine_state.hpp  parameters_info.hpp  ready_sn.hpp  speech_handler.hpp  voice_control.hpp  voiceprint_database.hpp
cyberdog_audio/src/: cyberdog_audio.cpp  main.cpp
cyberdog_audio/test/: CMakeLists.txt  audio_simulator.cpp
cyberdog_bluetooth_network/: package.xml  setup.cfg  setup.py
cyberdog_bluetooth_network/cyberdog_bluetooth_network/: bluetooth_node.py  bt_core.py  cyberdog_bluetooth_main.py
cyberdog_face/: CMakeLists.txt  package.xml
cyberdog_face/include/cyberdog_face/: cyberdog_face_entry.hpp
cyberdog_face/src/: cyberdog_face_entry.cpp  main.cpp
cyberdog_interactive/: CMakeLists.txt  README.md  package.xml
cyberdog_interactive/config/: interactive.toml
cyberdog_interactive/doc/: cyberdog_interactive_cn.md  cyberdog_interactive_en.md
cyberdog_interactive/include/cyberdog_interactive/: interactive.hpp
cyberdog_interactive/src/: interactive.cpp  main.cpp
cyberdog_vp/: README.md
cyberdog_vp/cyberdog_vp/: CMakeLists.txt  README.md  compile_and_install.cmake  package.xml
cyberdog_vp/cyberdog_vp/config/: abilityset.toml  debug_engine.toml  interface.toml  skin.toml
cyberdog_vp/cyberdog_vp/config/choreographer/: moonwalk_gait.toml  moonwalk_pace.toml  push_up_gait.toml  push_up_pace.toml
cyberdog_vp/cyberdog_vp/cyberdog_vp_demo/cyberdog_vp_demo/: CMakeLists.txt  README.md  package.xml
cyberdog_vp/cyberdog_vp/cyberdog_vp_demo/cyberdog_vp_demo_cpp/: CMakeLists.txt  README.md  compile_and_install.cmake  package.xml
cyberdog_vp/cyberdog_vp/cyberdog_vp_demo/cyberdog_vp_demo_cpp/src/: build_ros_demo.cpp  reuse_ros_demo.cpp
cyberdog_vp/cyberdog_vp/cyberdog_vp_demo/cyberdog_vp_demo_py/: README.md  package.xml  setup.cfg  setup.py
cyberdog_vp/cyberdog_vp/cyberdog_vp_demo/cyberdog_vp_demo_py/cyberdog_vp_demo_py/: build_ros_demo.py  reuse_ros_demo.py
cyberdog_vp/cyberdog_vp/cyberdog_vp_demo/cyberdog_vp_demo_py/test/: test_copyright.py  test_flake8.py  test_pep257.py
cyberdog_vp/cyberdog_vp/doc/: cyberdog_vp_cn.md  cyberdog_vp_doc.md  cyberdog_vp_en.md
cyberdog_vp/cyberdog_vp/doc/doxygen/: customdoxygen.css  cyberdog_vp.doxygen  footer.html  index.md
cyberdog_vp/cyberdog_vp/gadget/: image_base64.py
cyberdog_vp/cyberdog_vp/script/: choreographer.py  decorator.py  electrochromic.py  interaction.py  utils.py
cyberdog_vp/cyberdog_vp/sequence/: L91_user80_ballet_full.toml  L91_user81_front_lift_full.toml  L91_user82_rear_lift_full.toml  L91_user83_walk_wave_full.toml  L91_user84_trot_in_out_full.toml  L91_user85_diagonal_FR_full.toml  L91_user86_diagonal_FL_full.toml  L91_user87_pronk_front_back_full.toml  L91_user88_FR_lift_full.toml  L91_user89_FL_lift_full.toml  a_ballet_sequence.py  convert_toml_sequence.py  user_gait_01.toml
cyberdog_vp/cyberdog_vp/workspace/choreographer/: dancer.py
cyberdog_vp/cyberdog_vp/workspace/log/: README.md
cyberdog_vp/cyberdog_vp/workspace/module/: module.toml
cyberdog_vp/cyberdog_vp/workspace/module/src/: README.md  dancer.py
cyberdog_vp/cyberdog_vp/workspace/task/: task.toml
cyberdog_vp/cyberdog_vp/workspace/task/src/: README.md
cyberdog_vp/cyberdog_vp_abilityset/: CMakeLists.txt  README.md  compile_and_install.cmake  package.xml
cyberdog_vp/cyberdog_vp_engine/: CMakeLists.txt  README.md  compile_and_install.cmake  package.xml
cyberdog_vp/cyberdog_vp_engine/include/cyberdog_vp_engine/: artificial_intelligence.hpp  backend_message.hpp  base.hpp  common.hpp  frontend_message.hpp  fsm.hpp  interact.hpp  linux_at.hpp  linux_cron.hpp  module.hpp  python_interpreter.hpp  slam.hpp  task.hpp
cyberdog_vp/cyberdog_vp_engine/src/: artificial_intelligence.cpp  backend_message.cpp  base.cpp  common.cpp  engine.cpp  frontend_message.cpp  fsm.cpp  interact.cpp  linux_at.cpp  linux_cron.cpp  module.cpp  python_interpreter.cpp  slam.cpp  task.cpp
cyberdog_vp/cyberdog_vp_terminal/: CMakeLists.txt  README.md  compile_and_install.cmake  package.xml
cyberdog_vp/cyberdog_vp_terminal/include/cyberdog_vp_terminal/: common.hpp  debug_abilityset.hpp  debug_engine.hpp  debugger.hpp  interface.hpp  visual.hpp
cyberdog_vp/cyberdog_vp_terminal/src/api/: debug_abilityset.cpp  debug_engine.cpp  debugger.cpp  interface.cpp  main.cpp  visual.cpp  vptpy.hpp
cyberdog_vp/cyberdog_vp_terminal/src/node/: main.cpp
cyberdog_vp/cyberdog_vp_terminal/src/sdk/: common.cpp  debug_abilityset.cpp  debug_engine.cpp  debugger.cpp  interface.cpp  visual.cpp
image_transmission/: CMakeLists.txt  package.xml
image_transmission/include/image_transmission/: live_stream_broadcaster.hpp
image_transmission/include/webrtc_conductor/: conductor.hpp  video_track_input.hpp
image_transmission/src/: live_stream_broadcaster.cpp
image_transmission/src/webrtc_conductor/: conductor.cpp  defaults.cc  json.cc  video_adapter.cc
image_transmission/test/: i420_creator.cpp  i420_creator.h  test_main.cpp
(+89 files in other folders)
