<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>connector</name>
  <version>0.0.0</version>
  <description>connector wifi</description>
  <maintainer email="shangzihan@xiaomi.com">ShangZihan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>protocol</depend>
  <depend>zxing</depend>
  <depend>sensor_msgs</depend>
  <depend>rapidjson</depend>
  <depend>params</depend>
  <depend>cyberdog_system</depend>
  <depend>cyberdog_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
