<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_audio</name>
  <version>0.0.0</version>
  <description>cyberdog audio interaction</description>
  <maintainer email="liukai21@xiaomi.com">liukai21</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cyberdog_common</depend>
  <depend>xpack</depend>
  <depend>protocol</depend>
  <depend>cyberdog_machine</depend>
  <depend>motion_utils</depend>
  <depend>ament_index_cpp</depend>
  <depend>user_info_manager</depend>
  <depend>cyberdog_debug</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
