<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_vp</name>
  <version>0.2.1</version>
  <description>cyberdog visual programming</description>
  <maintainer email="shangzihan@xiaomi.com">ShangZihan</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pybind11</depend>
  <depend>cyberdog_vp_engine</depend>
  <depend>cyberdog_vp_abilityset</depend>
  <depend>cyberdog_vp_terminal</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
