<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_vp_engine</name>
  <version>0.2.1</version>
  <description>cyberdog visual programming engine</description>
  <maintainer email="shangzihan@xiaomi.com">ShangZihan</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rapidjson</depend>
  <depend>protocol</depend>
  <depend>params</depend>
  <depend>cyberdog_system</depend>
  <depend>cyberdog_common</depend>
  <depend>cyberdog_machine</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
